Re #8099: Stop li-elements in editor jumping with margin

--- a/core/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/core/src/zeit/content/article/edit/browser/resources/editor.css
@@ -180,7 +180,12 @@ color: #333;
 
 .editing .block-inner p,
 .editing .block-inner h3{
- margin-top:41px;
+  margin-top:41px;
+}
+
+.editing .block-inner ul {
+  margin-top:41px;
+  margin-bottom:57px;
 }
 
 
